# wagon

./: .gitignore  LICENSE  Makefile
docs/: docusaurus.config.js  package.json  (+2 more)
src/server/: procfile.dev  pyproject.toml
src/server/assets/: manifest.json
src/server/assets/vite/: test-uVk7IRVP.css
src/server/lib/app/: context.py  settings.py  urls.py
src/server/lib/core/: admin.py  fake.py  models.py  tables.py  urls.py  views.py
src/server/lib/core/management/commands/: vite.py
src/server/lib/core/migrations/: 0001_initial.py  0002_alter_account_phone.py
src/server/lib/core/templates/core/: all_trips.html  daisyui_table.html  index.html
src/server/lib/core/templates/core/drivers/: drivers.html
src/server/lib/core/templates/core/riders/: riders.html
src/server/lib/core/templates/core/riders/partials/: list.html
src/server/lib/core/templates/core/trips/: trips.html
src/server/lib/core/templates/cotton/: trip_filter.html
src/server/lib/dashboard/templates/cotton/: driver_dropdown_item.html  driver_summary_card.html  right_drawer.html  route_card.html  trip_driver_field.html  trip_filter.html  trip_notes_field.html  trip_rider_field.html  trip_route_field.html  vehicle_card.html
src/server/lib/dashboard/templates/dashboard/: base.html  table.html
src/server/vite/: package-lock.json  package.json  vite.config.js
src/server/vite/assets/css/: main.css
src/server/vite/assets/js/: important.js  main.js
src/server/vite/static/: manifest.json
src/server/vite/static/vite/: test-BiVnR97J.css  test-CrPhLzak.css  test-D397tEem.css  test-D5Qfh-Cr.js
(+39 files in other folders)
