[project]
name = "server"
description = "None"
readme = "README.md"
version = "0.1.0"

requires-python = ">=3.13"

dependencies = [
    "django>=5.2.4",
 "django-tables2>=2.7.5",
 "django-vite>=3.1.0",
 "factory-boy>=3.3.3",
]

[dependency-groups]
dev = [
    "django-browser-reload>=1.18.0",
    "djlint>=1.36.4",
    "factory-boy>=3.3.3",
    "honcho>=2.0.0",
]

[tool.djlint]
ignore = ["D018"]
